[package]
authors = ["Baptiste Gelez <baptiste@gelez.xyz>"]
description = "Rocket fairing for easy internationalization with gettext (also supports Actix web)"
license = "GPL-3.0"
name = "rocket_i18n"
readme = "README.md"
repository = "https://github.com/Plume-org/rocket_i18n"
keywords = ["i18n", "rocket", "gettext", "internationalization", "localization"]
categories = ["internationalization", "localization", "web-programming"]
version = "0.4.0"

[dependencies]
gettext = "0.3"

[dependencies.rocket]
version = "0.4.0"
optional = true

[dependencies.actix-web]
version = "0.7"
optional = true

[features]
default = ["rocket"]
